--- a/Hloi.html
+++ b/Hloi.html
@@ -15,12 +15,12 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="editable=true">Color Your Life with Our Holi Offers</h1>
-        <p style="editable=true">Holi is the festival of colors. Bring home the joy with our special Holi offers.</p>
-        <img src="https://images.unsplash.com/photo-1519802772250-a52a9af0eacb?q=80&w=1936&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Holi Image" style="editable=true" width="100%">
-        <p style="editable=true">Enjoy flat 20% off on all Holi essentials.</p>
-        <a href="#" class="button" style="editable=true">Shop Now</a>
-        <p style="editable=true">If you no longer wish to receive our newsletter, please <a href="#" style="editable=true">unsubscribe</a>.</p>
+        <h1>Color Your Life with Our Holi Offers</h1>
+        <p>Holi is the festival of colors. Bring home the joy with our special Holi offers.</p>
+        <img src="https://images.unsplash.com/photo-1519802772250-a52a9af0eacb?q=80&w=1936&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Holi Image" width="100%">
+        <p>Enjoy flat 20% off on all Holi essentials.</p>
+        <a href="#" class="button">Shop Now</a>
+        <p>If you no longer wish to receive our newsletter, please <a href="#">unsubscribe</a>.</p>
     </div>
 </body>
 </html>
