--- a/Hloi.html
+++ b/Hloi.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holi Festival Offer</title>
+    <title>Happy Holi</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
         .container { width: 100%; max-width: 600px; margin: auto; background: #fff; padding: 20px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
         h1 { color: #333; }
         p { color: #666; }
         img { width: 100%; height: auto; }
-        .button { display: inline-block; padding: 10px 20px; background-color: #e74c3c; color: #fff; text-decoration: none; border-radius: 5px; }
+        .button { display: inline-block; padding: 10px 20px; background-color: #3498db; color: #fff; text-decoration: none; border-radius: 5px; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Color Your Life with Our Holi Offers</h1>
-        <p>Holi is the festival of colors. Bring home the joy with our special Holi offers.</p>
-        <img src="https://images.unsplash.com/photo-1519802772250-a52a9af0eacb?q=80&w=1936&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Holi Image" width="100%">
-        <p>Enjoy flat 20% off on all Holi essentials.</p>
+        <h1>Holi Special Offers</h1>
+        <p>Celebrate Holi with our special deals and offers.</p>
+        <img src="https://img.freepik.com/free-photo/people-celebrating-holi-festival-color_23-2149217332.jpg" alt="Holi Image" width="100%">
+        <p>Get 25% off on all Holi festival items.</p>
         <a href="#" class="button">Shop Now</a>
-        <p>If you no longer wish to receive our newsletter, please <a href="#">unsubscribe</a>.</p>
     </div>
 </body>
 </html>
