--- a/Hloi.html
+++ b/Hloi.html
@@ -17,7 +17,7 @@
     <div class="container">
         <h1>Holi Special Offers</h1>
         <p>Celebrate Holi with our special deals and offers.</p>
-        <img src="https://img.freepik.com/free-photo/people-celebrating-holi-festival-color_23-2149217332.jpg" alt="Holi Image" width="100%">
+        <img src="https://images.unsplash.com/photo-1519802772250-a52a9af0eacb" alt="Holi Image" width="100%">
         <p>Get 25% off on all Holi festival items.</p>
         <a href="#" class="button">Shop Now</a>
     </div>
